PSA-COE-Intake-main/force-app/main/default/objects/coe_Intake__c.object
<CustomObject>
    <fields>
        <fullName>coe_Application_Users__c</fullName>
        <label>Application Users</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Both Internal and External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Avg_ATO__c</fullName>
        <formula>ROUND(coe_Total_ATO__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg ATO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_App_Exists_Value__c</fullName>
        <formula>ROUND(coe_Total_App_Exists_Value__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg App Exists Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Automations__c</fullName>
        <formula>ROUND(coe_Total_Automations__c / coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Automations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Collaboration_Need__c</fullName>
        <formula>ROUND(coe_Total_Collaboration_Need__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Collaboration Need</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Integration_Needs__c</fullName>
        <formula>ROUND( coe_Total_Integration_Needs__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Integration Needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Recommendation_Value__c</fullName>
        <formula>ROUND( coe_Total_Recommendation_Value__c / coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Recommendation Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Total_Existing_Platform__c</fullName>
        <formula>ROUND( coe_Total_Existing_Platform__c  /  coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Total Existing Platform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Avg_Total_Mobile_Access__c</fullName>
        <formula>ROUND(coe_Total_Mobile_Access__c  /  coe_Total_Number_of_Reviews__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Total Mobile Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>coe_Describe_the_Use_Case__c</fullName>
        <label>Describe the Use Case</label>
        <length>65000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>coe_Intake_Status__c</fullName>
        <label>Intake Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>* Draft</fullName>
                    <default>true</default>
                    <label>* Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_Integration_Needed__c</fullName>
        <label>Is Integration Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_Mobile_Access_needed__c</fullName>
        <label>Is Mobile Access needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_Platform_FedRamped__c</fullName>
        <label>Is Platform FedRAMPed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_Reports_Dashboard_needed__c</fullName>
        <label>Is Reports/Dashboard needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_a_System_Integrator_Needed__c</fullName>
        <label>Is a System Integrator Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_this_project_Funded__c</fullName>
        <label>Is this project Funded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY24 Funds</fullName>
                </value>
                <value>
                    <fullName>FY25 Funds</fullName>
                </value>
                <value>
                    <fullName>FY26 Funds</fullName>
                </value>
                <value>
                    <fullName>I do not have Funding</fullName>
                </value>
                <value>
                    <fullName>Funding not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_this_request_part_of_legislation__c</fullName>
        <label>Is this request part of legislation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>coe_Mobile_Access_Type__c</fullName>
        <label>Mobile Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Mobile</fullName>
                </value>
                <value>
                    <fullName>Full Offline Support</fullName>
                </value>
                <value>
                    <fullName>Limited Bandwidth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Name_of_Legislation__c</fullName>
        <label>Name of Legislation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coe_Number_External_Users__c</fullName>
        <label>Number External Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Number_Internal_Users__c</fullName>
        <label>Number Internal Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Other__c</fullName>
        <label>Other</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coe_Platform_Choice__c</fullName>
        <label>Platform Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Pega Systems</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Preferred_Platform__c</fullName>
        <label>Preferred Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Pega Systems</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Program_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intakes</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>coe_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Intakes</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_ATO__c</fullName>
        <formula>ROUND(coe_Total_ATO__c /  coe_Total_Number_of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score ATO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_App_Exists__c</fullName>
        <formula>ROUND( coe_Total_App_Exists_Value__c  / coe_Total_Number_of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score App Exists</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Automations__c</fullName>
        <formula>ROUND( coe_Total_Automations__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Automations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Collaboration__c</fullName>
        <formula>ROUND( coe_Total_Collaboration_Need__c/ coe_Total_Number_of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Collaboration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Existing_Platform__c</fullName>
        <formula>ROUND( coe_Total_Existing_Platform__c/ coe_Total_Number_of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Existing Platform</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Integration__c</fullName>
        <formula>ROUND( coe_Total_Integration_Needs__c/ coe_Total_Number_of_Reviews__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Integration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Mobile_Access__c</fullName>
        <formula>ROUND( coe_Total_Mobile_Access__c / coe_Total_Number_of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Mobile Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Review_Score_Recommendation__c</fullName>
        <formula>ROUND( coe_Total_Recommendation_Value__c/ coe_Total_Number_of_Reviews__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Score Recommendation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Target_Launch_Date__c</fullName>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>coe_Total_ATO__c</fullName>
        <description>Total rollup of ato review question</description>
        <label>Total ATO</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_ATO__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_App_Exists_Value__c</fullName>
        <description>Total roll-up of the app exist review question</description>
        <label>Total App Exists Value</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_App_Exists__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Automations__c</fullName>
        <description>Total roll-up of the process automations review question</description>
        <label>Total Automations</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Process_Automation__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Collaboration_Need__c</fullName>
        <description>Total roll-up of the collaboration needs review question</description>
        <label>Total Collaboration Need</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Collaboration_Need__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Completed_Reviews__c</fullName>
        <description>Total number of reviews that we&apos;re completed based on a value set for recommendation</description>
        <label>Total Completed Reviews</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Recommendation__c</summarizedField>
        <summaryFilterItems>
            <field>coe_IntakeReview__c.coe_Recommendation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Existing_Platform__c</fullName>
        <description>Total rollup of existing platform review question</description>
        <label>Total Existing Platform</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Existing_Platform__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Integration_Needs__c</fullName>
        <description>Total roll-up of the integration needs review question</description>
        <label>Total Integration Needs</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Integration_Need__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Mobile_Access__c</fullName>
        <description>Total roll-up of the mobile access review question</description>
        <label>Total Mobile Access</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Mobile_Access__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Number_of_Reviews__c</fullName>
        <description>Rollup of all the intake review records</description>
        <label>Total Number of Reviews</label>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Total_Recommendation_Value__c</fullName>
        <description>Total value of intake review recommendation</description>
        <label>Total Recommendation Value</label>
        <summarizedField>coe_IntakeReview__c.coe_Value_Recommendation__c</summarizedField>
        <summaryForeignKey>coe_IntakeReview__c.coe_Intake__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>coe_Utilize_Existing_Contract__c</fullName>
        <label>Utilize Existing Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Web_link_to_Legislation__c</fullName>
        <label>Web link to Legislation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>coe_What_Systems_will_need_integrated__c</fullName>
        <label>What Systems will need to be integrated?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>coe_What_type_of_application__c</fullName>
        <label>What type of application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_Application</fullName>
                    <label>New Application</label>
                </value>
                <value>
                    <fullName>Upgrade_Modernize_Existing_Application</fullName>
                    <label>Upgrade/Modernize Existing Application</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intake</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>coe_Intake_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>coe_Date_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{YYMMDD}-{000}</displayFormat>
        <label>Intake Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <recordTypes>
        <fullName>COE_Intake</fullName>
        <active>true</active>
        <description>COE Intake Process</description>
        <label>COE Intake</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>